# General executables to build
SET( BUILD_TESTS ON CACHE BOOL "Build test executables")
SET( BUILD_TOOLS ON CACHE BOOL "Build tools executables")
SET( BUILD_DEMO ON CACHE BOOL "Build demo executables")

# Modules to build
SET( BUILD_ASSET ON CACHE BOOL "Build asset libraries")
SET( BUILD_ASSET_ARCHIVE ON CACHE BOOL "Build asset archive libraries")
SET( BUILD_ASSET_ARCHIVER ON CACHE BOOL "Build asset archiver libraries")
SET( BUILD_ASSET_IMPORT ON CACHE BOOL "Build asset import libraries")
SET( BUILD_GI ON CACHE BOOL "Build graphics interface libraries")
SET( BUILD_RS ON CACHE BOOL "Build rendering system libraries")
SET( BUILD_WS ON CACHE BOOL "Build window management libraries")
# Dependant modules to build
SET( BUILD_ASSET_IMPORTER_ASSIMP ON CACHE BOOL "Build asset importer based on ASSIMP")
SET( BUILD_ASSET_IMPORTER_FREETYPE ON CACHE BOOL "Build asset importer based on FreeType 2")
SET( BUILD_OPENGL ON CACHE BOOL "Build OpenGL libraries")
SET( BUILD_ENGINE ON CACHE BOOL "Build engine")

ADD_SUBDIRECTORY(O8)
ADD_SUBDIRECTORY(Utilities)

IF (BUILD_ASSET)
	IF (BUILD_TOOLS AND BUILD_ASSET_IMPORT AND BUILD_ASSET_ARCHIVE AND BUILD_ASSET_ARCHIVER)
		ADD_SUBDIRECTORY(AssetCmdTool)
	ENDIF (BUILD_TOOLS AND BUILD_ASSET_IMPORT AND BUILD_ASSET_ARCHIVE AND BUILD_ASSET_ARCHIVER)

	IF (BUILD_ASSET_IMPORT)
        ADD_SUBDIRECTORY(Asset_importers)
	ENDIF (BUILD_ASSET_IMPORT)
ENDIF (BUILD_ASSET)

IF (BUILD_OPENGL)
	ADD_SUBDIRECTORY(OpenGL)
ENDIF (BUILD_OPENGL)

IF (BUILD_VULKAN)
	ADD_SUBDIRECTORY(Vulkan)
ENDIF (BUILD_VULKAN)

# Tests
IF (BUILD_TESTS)
	ADD_SUBDIRECTORY(Unit_Tests)
ENDIF(BUILD_TESTS)
