# General executables to build
SET( BUILD_TESTS ON CACHE BOOL "Build test executables")
SET( BUILD_TOOLS ON CACHE BOOL "Build tools executables")
SET( BUILD_DEMO ON CACHE BOOL "Build demo executables")

# Modules to build
SET( BUILD_ASSET ON CACHE BOOL "Build asset libraries")
SET( BUILD_ASSET_ARCHIVE ON CACHE BOOL "Build asset archive libraries")
SET( BUILD_ASSET_IMPORT ON CACHE BOOL "Build asset import libraries")
SET( BUILD_ASSET_REGISTRY ON CACHE BOOL "Build asset registry libraries")
SET( BUILD_GI ON CACHE BOOL "Build graphics interface libraries")
SET( BUILD_RS ON CACHE BOOL "Build rendering system libraries")
SET( BUILD_WS ON CACHE BOOL "Build window management libraries")

# Dependant modules to build
SET( BUILD_ASSET_IMPORTER_ASSIMP ON CACHE BOOL "Build asset importer based on ASSIMP")
SET( BUILD_ASSET_IMPORTER_FREETYPE ON CACHE BOOL "Build asset importer based on FreeType 2")
SET( BUILD_OPENGL ON CACHE BOOL "Build OpenGL libraries")
SET( BUILD_ENGINE ON CACHE BOOL "Build engine")

# Configuration
IF(WIN32)
	# Lib names
	SET(GI_GL_IMPL "GI_Windows_OGL")
	
	# Impl directories
	SET(GI_GL_IMPL_DIR "GI_Windows_OGL")
	
	# DLL paths
	SET(GI_GL_IMPL_PATH "GI_Windows_OGL.dll")
ENDIF(WIN32)

IF    (BUILD_GI)
	IF    (BUILD_OPENGL)
		ADD_DEFINITIONS(-DGI_IMPL="${GI_GL_IMPL_PATH}")
	ENDIF (BUILD_OPENGL)
ENDIF (BUILD_GI)


#Add subdirectories

#Basic
ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Image)

# DLL
ADD_SUBDIRECTORY(DL)
ADD_SUBDIRECTORY(${DL_IMPL_DIR})

# Threads
ADD_SUBDIRECTORY(Thread)
ADD_SUBDIRECTORY(${THREAD_IMPL_DIR})


# Modules
#Asset
IF (BUILD_ASSET)
	ADD_SUBDIRECTORY(Asset)

	IF (BUILD_TOOLS AND BUILD_ASSET_IMPORT AND BUILD_ASSET_ARCHIVE AND BUILD_ASSET_REGISTRY)
		ADD_SUBDIRECTORY(AssetCmdTool)
	ENDIF (BUILD_TOOLS AND BUILD_ASSET_IMPORT AND BUILD_ASSET_ARCHIVE AND BUILD_ASSET_REGISTRY)

	IF (BUILD_ASSET_IMPORT)
		IF (BUILD_ASSET_IMPORTER_ASSIMP)
			ADD_SUBDIRECTORY(Asset_Importer_ASSIMP)
		ENDIF (BUILD_ASSET_IMPORTER_ASSIMP)
		IF(BUILD_ASSET_IMPORTER_FREETYPE)
			ADD_SUBDIRECTORY(Asset_Importer_FreeType)
		ENDIF(BUILD_ASSET_IMPORTER_FREETYPE)
	ENDIF (BUILD_ASSET_IMPORT)
ENDIF (BUILD_ASSET)

#GI
IF (BUILD_GI)
	ADD_SUBDIRECTORY(GI)
	
	IF(BUILD_OPENGL)
		ADD_SUBDIRECTORY(GI_OGL)
		ADD_SUBDIRECTORY(${GI_GL_IMPL_DIR})
	ENDIF(BUILD_OPENGL)
	
	IF (BUILD_RS)
		ADD_SUBDIRECTORY(RS)
	ENDIF (BUILD_RS)
ENDIF (BUILD_GI)


#Engine
IF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE)
	ADD_SUBDIRECTORY(Engine)
ENDIF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE)

#WS
IF (BUILD_WS)
	ADD_SUBDIRECTORY(WS)
	ADD_SUBDIRECTORY(${WS_IMPL_DIR})
ENDIF (BUILD_WS)


# Demo application
IF (BUILD_DEMO)
	IF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE AND BUILD_WS)
		ADD_SUBDIRECTORY(Demo_basics)
	ENDIF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE AND BUILD_WS)
ENDIF (BUILD_DEMO)

