# Configuration
IF(WIN32)
	# Lib names
	SET(GI_GL_IMPL "GI_Windows_OGL")
	
	# Impl directories
	SET(GI_GL_IMPL_DIR "GI_Windows_OGL")
	
	# DLL paths
	SET(GI_GL_IMPL_PATH "GI_Windows_OGL.dll")
ENDIF(WIN32)

IF    (BUILD_GI)
	IF    (BUILD_OPENGL)
		ADD_DEFINITIONS(-DGI_IMPL="${GI_GL_IMPL_PATH}")
	ENDIF (BUILD_OPENGL)
ENDIF (BUILD_GI)


#Add subdirectories

#Basic
ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Image)

# DLL
ADD_SUBDIRECTORY(DL)

# Threads
ADD_SUBDIRECTORY(Thread)


# Modules
#Asset
IF (BUILD_ASSET)
	ADD_SUBDIRECTORY(Asset)
ENDIF (BUILD_ASSET)

#GI
IF (BUILD_GI)
	ADD_SUBDIRECTORY(GI)
	
	IF(BUILD_OPENGL)
		ADD_SUBDIRECTORY(GI_OGL)
		ADD_SUBDIRECTORY(${GI_GL_IMPL_DIR})
	ENDIF(BUILD_OPENGL)
	
	IF (BUILD_RS)
		ADD_SUBDIRECTORY(RS)
	ENDIF (BUILD_RS)
ENDIF (BUILD_GI)


#Engine
IF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE)
	ADD_SUBDIRECTORY(Engine)
ENDIF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE)

#WS
IF (BUILD_WS)
	ADD_SUBDIRECTORY(WS)
ENDIF (BUILD_WS)


# Demo application
IF (BUILD_DEMO)
	IF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE AND BUILD_WS)
		ADD_SUBDIRECTORY(Demo_basics)
	ENDIF (BUILD_GI AND BUILD_RS AND BUILD_ASSET AND BUILD_ENGINE AND BUILD_WS)
ENDIF (BUILD_DEMO)

