PROJECT(Asset)

ADD_LIBRARY(Asset STATIC
			PCH.cpp
			PCH.hpp
			Type.cpp
			Type.hpp)

IF (BUILD_ASSET_ARCHIVE)
ADD_SUBDIRECTORY(Archive)
ENDIF (BUILD_ASSET_ARCHIVE)

IF (BUILD_ASSET_ARCHIVER)
ADD_SUBDIRECTORY(Archiver)
ENDIF (BUILD_ASSET_ARCHIVER)

IF (BUILD_ASSET_IMPORT)
ADD_SUBDIRECTORY(Importer)
ADD_SUBDIRECTORY(Import_manager)
ENDIF (BUILD_ASSET_IMPORT)
