PROJECT(Templates)

ADD_LIBRARY (Templates STATIC
			 ApplyTupple.hpp
             IntrusiveList.hpp
			 IsMethod.hpp
			 MemoryAccess.hpp
			 PCH.hpp
			 PCH.cpp
			 PointerContainer.hpp
			 ReferenceCounted.cpp
			 ReferenceCounted.hpp
			 SharedResource.hpp
			 Singleton.hpp
			 Task.hpp
			 Type.hpp)
